# pydajet-metadata

./: .coveragerc  .gitignore  PROTOCOL_ARCHITECTURE.md  README.md  SESSION_NOTES.md  pyproject.toml  pytest_failures.txt  setup.py  verify_protocol_refactor.py
.github/workflows/: ci.yml
docs/: API.md
scripts/: __init__.py  archive.py  debug_repo.py  debug_repo_refresh.py
scripts/build_tools/: __init__.py  commands.py  config.py  downloader.py
src/dajet/: __init__.py  _types.py  _uuid.py  api.py  bridge.py  client.py  query.py  repository.py  schema.py  session.py
src/pydajet/: __init__.py  _dotnet.py  _platform.py  _uuid.py  client.py  exceptions.py
src/pydajet_metadata/: __init__.py  _api_types.py  _cache.py  _metadata_types.py  _platform.py  _pydantic_factory.py  _schema_methods.py  _sql_types.py  _types.py  _uuid.py  api.py  async_query.py  async_repository.py  async_session.py  bridge.py  client.py  core.py  exceptions.py  mapper.py  model.py  models.py  openapi_generator.py  orm.py  polars_bridge.py  protocols.py  query.py  repository.py  schema.py  session.py  settings.py
src/scripts/: __init__.py  archive.py
src/scripts/build_tools/: __init__.py  commands.py  config.py  downloader.py  logging_utils.py
stubs/: README.md  clr.pyi
stubs/DaJet/: Data.pyi  Metadata.pyi  __init__.pyi
stubs/System/: __init__.pyi
stubs/System/Collections/: Generic.pyi  __init__.pyi
tests/: UNIT_TESTS_README.md  conftest.py  test_api.py  test_async_query.py  test_async_repository.py  test_async_session.py  test_cache_settings.py  test_client.py  test_conftest.py  test_import_independence.py  test_mapper.py  test_polars_bridge.py  test_protocols.py  test_pydajet_client.py  test_pydajet_uuid.py  test_query.py  test_repository.py  test_schema.py  test_session.py  test_types.py  test_uuid.py
tests/unit/: __init__.py
tests/unit/bridge/: __init__.py  test_bridge.py
tests/unit/build_tools/: test_commands.py  test_downloader.py
tests/unit/mapper/: __init__.py  test_mapper.py
tests/unit/query/: __init__.py  test_query_extended.py
tests/unit/repository/: __init__.py  test_repository.py
tests/unit/schema/: __init__.py  test_schema_extended.py
tests/unit/session/: test_session_extended.py
