[project]
name = "pydajet-metadata"
version = "0.1.0"
description = "..."
requires-python = ">=3.13"
dependencies = [
    "build>=1.5.0",
    "fastapi>=0.136.1",
    "httpx>=1.0.dev3",
    "icecream>=2.2.0",
    "polars>=1.40.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pythonnet>=3.0.5",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[build-system]
requires = [
    "setuptools>=82.0.1","sitecustomize",
    "tomli>=2.4.1","icecream"
]
build-backend = "setuptools.build_meta"
package=true

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "dajet",
    "dajet.*",
    "pydajet_metadata",
    "pydajet_metadata.*"]

[tool.setuptools.package-data]
dajet = []
pydajet_metadata = [
    "bin/**/*"
]

[tool.dajet]
version = "v5.0.0-alpha"

[tool.uv.sources.sitecustomize]
git = "https://gitflic.ru/project/rav/sitecustomize.git"
