[project]
name = "pydajet-metadata"
version = "0.1.0"
description = "..."
requires-python = ">=3.13"
dependencies = [
    "build>=1.5.0",
    "fastapi>=0.136.1",
    "icecream>=2.2.0",
    "polars>=1.40.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pythonnet>=3.0.5",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[build-system]
requires = [
    "setuptools>=82.0.1",
    "sitecustomize",
    "tomli>=2.4.1",
    "icecream",
]
build-backend = "setuptools.build_meta"
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "pydajet",
    "pydajet.*",
    "pydajet_metadata",
    "pydajet_metadata.*",
]

[tool.setuptools.package-data]
pydajet_metadata = ["bin/**/*"]

[tool.dajet]
version = "v5.0.0-alpha"

[tool.uv.sources]
sitecustomize = { git = "https://gitflic.ru/project/rav/sitecustomize.git" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "hypothesis>=6.152.7",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v","-s","-x",
    "--tb=long",
    "--strict-markers",
    "--cov=src/pydajet",
    "--cov=src/pydajet_metadata",
    "--cov-report=html",
    "--cov-report=term",
    "--durations=10",
    "--showlocals",
]

[tool.coverage.run]
source = ["src/pydajet", "src/pydajet_metadata"]
omit = [
    "tests/*",
    "**/teamcity/*",
    "**/pycharm/*",
    "**/_jb_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
